--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zHH-6e-uOa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HMo-IR-3Tj">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -280,6 +280,110 @@
             </objects>
             <point key="canvasLocation" x="-509.4202898550725" y="1296.6032608695652"/>
         </scene>
+        <!--Sign in-->
+        <scene sceneID="l8m-L9-8EQ">
+            <objects>
+                <viewController id="6DW-DN-JFv" customClass="MyRoamniSigninViewController" customModule="Roamni" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nsW-jR-I0n"/>
+                        <viewControllerLayoutGuide type="bottom" id="zmd-ed-pv6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uZh-sY-pXh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Sign in" id="elv-5D-WkT">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="dDh-Aa-kh7">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="cancel:" destination="6DW-DN-JFv" id="YO6-D1-wEP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="cancelBtn" destination="dDh-Aa-kh7" id="9f4-uL-J1e"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M8x-Gk-Vbi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4366.666666666667" y="-2064.130434782609"/>
+        </scene>
+        <!--My Roamni Log View Controller-->
+        <scene sceneID="WXi-I1-Upf">
+            <objects>
+                <viewController storyboardIdentifier="MyRoamniLogViewController" id="HMo-IR-3Tj" customClass="MyRoamniLogViewController" customModule="Roamni" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EIt-sd-JF0"/>
+                        <viewControllerLayoutGuide type="bottom" id="v4E-np-1aZ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2JD-RO-jOy">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="caM-32-3AH">
+                                <rect key="frame" x="89" y="277" width="235" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mYL-9x-M63">
+                                <rect key="frame" x="89" y="324" width="235" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n7O-Ub-6sX">
+                                <rect key="frame" x="169" y="382" width="76" height="30"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h9o-dc-FKh">
+                                <rect key="frame" x="169" y="499" width="76" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="76" id="42q-PR-6RN"/>
+                                </constraints>
+                                <state key="normal" title="Sign Up">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="f0j-IM-a6f" kind="show" id="Jia-mj-UPD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GRw-GD-JaW" customClass="FBSDKLoginButton">
+                                <rect key="frame" x="91" y="537" width="234" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="234" id="oMg-0b-IdI"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="caM-32-3AH" firstAttribute="centerX" secondItem="GRw-GD-JaW" secondAttribute="centerX" constant="-1.5" id="01S-GT-rCI"/>
+                            <constraint firstItem="caM-32-3AH" firstAttribute="top" secondItem="EIt-sd-JF0" secondAttribute="bottom" constant="257" id="1aV-UA-Hky"/>
+                            <constraint firstItem="h9o-dc-FKh" firstAttribute="leading" secondItem="n7O-Ub-6sX" secondAttribute="leading" id="3Fl-Wx-jXm"/>
+                            <constraint firstItem="h9o-dc-FKh" firstAttribute="centerX" secondItem="GRw-GD-JaW" secondAttribute="centerX" constant="-1" id="74F-7P-S03"/>
+                            <constraint firstItem="mYL-9x-M63" firstAttribute="trailing" secondItem="caM-32-3AH" secondAttribute="trailing" id="7pu-Fi-lIT"/>
+                            <constraint firstItem="h9o-dc-FKh" firstAttribute="trailing" secondItem="n7O-Ub-6sX" secondAttribute="trailing" id="GMz-vq-X6n"/>
+                            <constraint firstItem="caM-32-3AH" firstAttribute="trailing" secondItem="GRw-GD-JaW" secondAttribute="trailing" constant="-1" id="O6L-rC-nVz"/>
+                            <constraint firstItem="n7O-Ub-6sX" firstAttribute="top" secondItem="mYL-9x-M63" secondAttribute="bottom" constant="28" id="Yje-HR-blA"/>
+                            <constraint firstItem="GRw-GD-JaW" firstAttribute="centerY" secondItem="2JD-RO-jOy" secondAttribute="centerY" constant="184" id="dKz-JY-AZs"/>
+                            <constraint firstItem="GRw-GD-JaW" firstAttribute="centerX" secondItem="2JD-RO-jOy" secondAttribute="centerX" constant="1" id="fwc-Lr-UpG"/>
+                            <constraint firstItem="GRw-GD-JaW" firstAttribute="top" secondItem="h9o-dc-FKh" secondAttribute="bottom" constant="8" id="gOR-Zq-PvW"/>
+                            <constraint firstItem="mYL-9x-M63" firstAttribute="leading" secondItem="caM-32-3AH" secondAttribute="leading" id="omY-5G-Ns5"/>
+                            <constraint firstItem="mYL-9x-M63" firstAttribute="top" secondItem="caM-32-3AH" secondAttribute="bottom" constant="17" id="xBB-2r-yTX"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="loginBn" destination="GRw-GD-JaW" id="gaH-lX-30c"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EDo-CJ-Tzh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2742.0289855072465" y="-2321.739130434783"/>
+        </scene>
         <!--Test View Controller-->
         <scene sceneID="SSq-oA-ScI">
             <objects>
@@ -316,7 +420,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMC-8d-0aI" userLabel="Song Title">
-                                        <rect key="frame" x="49.5" y="1.5" width="313" height="26"/>
+                                        <rect key="frame" x="49.5" y="3" width="313" height="26"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.99019607840000001" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -349,7 +453,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7H6-39-JIU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4631" y="-2635"/>
+            <point key="canvasLocation" x="-1910.144927536232" y="-2635.5978260869565"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="CIV-in-uTT">
@@ -682,7 +786,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WNS-Mf-nLm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1303" y="-1620"/>
+            <point key="canvasLocation" x="510.14492753623193" y="-1620.6521739130435"/>
         </scene>
         <!--My Roamni-->
         <scene sceneID="suh-fE-5e0">
@@ -2025,7 +2129,7 @@ Collect the earnings as Roamni credits in the app for you to build and use on ot
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pIx-R1-TaT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5444" y="-1685.3073463268368"/>
+            <point key="canvasLocation" x="8165.2173913043489" y="-1685.8695652173915"/>
         </scene>
         <!--About Roam-->
         <scene sceneID="wxc-s2-UME">
@@ -2754,7 +2858,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pti-n1-YY1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3589.5999999999999" y="-1619.6401799100452"/>
+            <point key="canvasLocation" x="5402.898550724638" y="-1619.8369565217392"/>
         </scene>
         <!--Container Map View Controller-->
         <scene sceneID="MHu-LW-KUb">
@@ -3304,7 +3408,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QH9-nn-UDX" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="dSs-4A-iw2" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-4026.0869565217395" y="-1888.858695652174"/>
+            <point key="canvasLocation" x="-1304.3478260869567" y="-1888.858695652174"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cqg-fV-JCA">
@@ -3358,7 +3462,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tmC-0h-QcK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6380" y="-2677.5112443778112"/>
+            <point key="canvasLocation" x="9101.4492753623199" y="-2677.989130434783"/>
         </scene>
         <!--Rating-->
         <scene sceneID="bGK-16-JvQ">
@@ -4014,6 +4118,24 @@ Download the Roamni app today to make a tour or take a tour.</string>
             </objects>
             <point key="canvasLocation" x="-838" y="-4948"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="My3-Aq-41J">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f0j-IM-a6f" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FPF-qo-qej">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6DW-DN-JFv" kind="relationship" relationship="rootViewController" id="Z5c-uU-zWs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m09-G8-ppR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-5273.913043478261" y="-2064.130434782609"/>
+        </scene>
     </scenes>
     <resources>
         <image name="1" width="143" height="143"/>
@@ -4055,8 +4177,8 @@ Download the Roamni app today to make a tour or take a tour.</string>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="YIB-t0-b6L"/>
-        <segue reference="aGK-Qo-5oV"/>
         <segue reference="s2S-wb-XYy"/>
+        <segue reference="aGK-Qo-5oV"/>
         <segue reference="0AN-x8-xfG"/>
     </inferredMetricsTieBreakers>
 </document>
