--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -291,7 +291,102 @@
                     <view key="view" contentMode="scaleToFill" id="uZh-sY-pXh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Imv-4N-gsJ">
+                                <rect key="frame" x="62" y="87" width="300" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TuE-44-c0Y">
+                                <rect key="frame" x="61" y="268" width="301" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h38-OZ-ghM">
+                                <rect key="frame" x="61" y="223" width="301" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0zK-6w-3OD">
+                                <rect key="frame" x="62" y="133" width="301" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uhs-7E-8BI">
+                                <rect key="frame" x="62" y="178" width="300" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PrQ-uI-LqZ">
+                                <rect key="frame" x="68" y="331" width="288" height="139"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="139" id="z3k-Wu-agx"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="6DW-DN-JFv" id="013-Y5-vbJ"/>
+                                    <outlet property="delegate" destination="6DW-DN-JFv" id="WVl-Bd-FXC"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AbK-dH-NCL">
+                                <rect key="frame" x="61" y="312" width="87" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="87" id="tJV-Ph-3la"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.16207867860794067" green="0.22527363896369934" blue="0.33319735527038574" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About me:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qli-sF-wD1">
+                                <rect key="frame" x="61" y="478" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U7m-HW-6yU">
+                                <rect key="frame" x="30" y="507" width="364" height="136"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="0.16207867860794067" green="0.22527363896369934" blue="0.33319735527038574" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="136" id="58b-oo-ZGZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TuE-44-c0Y" firstAttribute="leading" secondItem="uhs-7E-8BI" secondAttribute="leading" constant="-1" id="4uF-Ih-MsM"/>
+                            <constraint firstItem="Qli-sF-wD1" firstAttribute="top" secondItem="PrQ-uI-LqZ" secondAttribute="bottom" constant="8" id="5aL-sx-29d"/>
+                            <constraint firstItem="TuE-44-c0Y" firstAttribute="trailing" secondItem="h38-OZ-ghM" secondAttribute="trailing" id="9gn-Xc-ckR"/>
+                            <constraint firstItem="PrQ-uI-LqZ" firstAttribute="top" secondItem="AbK-dH-NCL" secondAttribute="bottom" constant="-2" id="DGd-IG-qfC"/>
+                            <constraint firstItem="0zK-6w-3OD" firstAttribute="leading" secondItem="uZh-sY-pXh" secondAttribute="leadingMargin" constant="42" id="EFE-bY-bMZ"/>
+                            <constraint firstItem="uhs-7E-8BI" firstAttribute="top" secondItem="0zK-6w-3OD" secondAttribute="bottom" constant="15" id="FCs-VK-qlH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="U7m-HW-6yU" secondAttribute="trailing" id="GSp-wG-fWa"/>
+                            <constraint firstItem="PrQ-uI-LqZ" firstAttribute="top" secondItem="TuE-44-c0Y" secondAttribute="bottom" constant="33" id="Jkj-xo-fvh"/>
+                            <constraint firstItem="PrQ-uI-LqZ" firstAttribute="leading" secondItem="uZh-sY-pXh" secondAttribute="leadingMargin" constant="48" id="N2C-AP-ciQ"/>
+                            <constraint firstItem="0zK-6w-3OD" firstAttribute="top" secondItem="Imv-4N-gsJ" secondAttribute="bottom" constant="16" id="NNM-Ge-FaK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="PrQ-uI-LqZ" secondAttribute="trailing" constant="38" id="NZK-DG-xbz"/>
+                            <constraint firstItem="U7m-HW-6yU" firstAttribute="top" secondItem="PrQ-uI-LqZ" secondAttribute="bottom" constant="37" id="R5N-K2-YmO"/>
+                            <constraint firstItem="AbK-dH-NCL" firstAttribute="leading" secondItem="Qli-sF-wD1" secondAttribute="leading" id="Uly-O5-kFD"/>
+                            <constraint firstItem="Imv-4N-gsJ" firstAttribute="leading" secondItem="0zK-6w-3OD" secondAttribute="leading" id="Vmr-4A-hw3"/>
+                            <constraint firstItem="AbK-dH-NCL" firstAttribute="leading" secondItem="PrQ-uI-LqZ" secondAttribute="leading" constant="-7" id="WEO-nT-Yz9"/>
+                            <constraint firstItem="0zK-6w-3OD" firstAttribute="centerX" secondItem="uZh-sY-pXh" secondAttribute="centerX" constant="5.5" id="aIS-bP-6Ex"/>
+                            <constraint firstItem="TuE-44-c0Y" firstAttribute="top" secondItem="uZh-sY-pXh" secondAttribute="top" constant="268" id="aXx-BO-HVo"/>
+                            <constraint firstItem="TuE-44-c0Y" firstAttribute="trailing" secondItem="uhs-7E-8BI" secondAttribute="trailing" id="b2I-a8-rRI"/>
+                            <constraint firstItem="TuE-44-c0Y" firstAttribute="top" secondItem="h38-OZ-ghM" secondAttribute="bottom" constant="15" id="iw3-Vg-r9U"/>
+                            <constraint firstItem="AbK-dH-NCL" firstAttribute="trailing" secondItem="Qli-sF-wD1" secondAttribute="trailing" id="pdk-PC-ikz"/>
+                            <constraint firstItem="Imv-4N-gsJ" firstAttribute="trailing" secondItem="0zK-6w-3OD" secondAttribute="trailing" constant="-1" id="t1B-hY-n2g"/>
+                            <constraint firstItem="uhs-7E-8BI" firstAttribute="leading" secondItem="0zK-6w-3OD" secondAttribute="leading" id="t3r-7D-st3"/>
+                            <constraint firstItem="PrQ-uI-LqZ" firstAttribute="centerX" secondItem="U7m-HW-6yU" secondAttribute="centerX" id="wB6-CG-wco"/>
+                            <constraint firstItem="TuE-44-c0Y" firstAttribute="leading" secondItem="h38-OZ-ghM" secondAttribute="leading" id="wcy-2X-Snu"/>
+                            <constraint firstItem="Imv-4N-gsJ" firstAttribute="top" secondItem="nsW-jR-I0n" secondAttribute="bottom" constant="23" id="xjg-uj-bc9"/>
+                            <constraint firstItem="uhs-7E-8BI" firstAttribute="trailing" secondItem="0zK-6w-3OD" secondAttribute="trailing" constant="-1" id="zb6-Tg-BEh"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Sign in" id="elv-5D-WkT">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="dDh-Aa-kh7">
@@ -300,9 +395,22 @@
                                 <action selector="cancel:" destination="6DW-DN-JFv" id="YO6-D1-wEP"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="7UB-ZZ-uvK">
+                            <connections>
+                                <action selector="done:" destination="6DW-DN-JFv" id="PZq-Go-QcJ"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="aboutmeText" destination="U7m-HW-6yU" id="QKG-08-BPj"/>
                         <outlet property="cancelBtn" destination="dDh-Aa-kh7" id="9f4-uL-J1e"/>
+                        <outlet property="countryPicker" destination="PrQ-uI-LqZ" id="CaW-hy-QYx"/>
+                        <outlet property="doneBtn" destination="7UB-ZZ-uvK" id="X7A-2X-zKl"/>
+                        <outlet property="emailField" destination="Imv-4N-gsJ" id="auw-o5-pbb"/>
+                        <outlet property="firstnameField" destination="h38-OZ-ghM" id="AIq-de-MIs"/>
+                        <outlet property="lastnameField" destination="TuE-44-c0Y" id="tnh-Qf-hSW"/>
+                        <outlet property="passwordField" destination="0zK-6w-3OD" id="Kpz-hr-DvS"/>
+                        <outlet property="repassword" destination="uhs-7E-8BI" id="p6u-Tr-Xbi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M8x-Gk-Vbi" userLabel="First Responder" sceneMemberID="firstResponder"/>
